<resources>
    <string name="app_name">Ui tests</string>
    <string name="login">Login</string>
    <string name="settings">Settings</string>
    <string name="guys_title">Guys list</string>
</resources>
