<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EEEEEE"
    tools:context=".ui.main.MainActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/act_main_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:elevation="4dp"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        android:theme="@style/ToolbarTheme" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/act_main_rv_guys"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@android:color/transparent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/act_main_toolbar"
        tools:listitem="@layout/support_simple_spinner_dropdown_item" />


</android.support.constraint.ConstraintLayout>